--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,26 +1,23 @@
 [package]
 name = "adder"
 version = "1.0.0"
+authors = ["PBA"]
 edition = "2021"
 
 [dependencies]
-ink = { version = "=4.2.1", default-features = false }
+ink = { version = "=4.3.0", default-features = false }
 
-scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
-scale-info = { version = "2.6", default-features = false, features = ["derive"], optional = true }
-
-[dev-dependencies]
-ink_e2e = "4.2.0"
+scale = { package = "parity-scale-codec", version = "3", default-features = false, features = [
+    "derive",
+] }
+scale-info = { version = "2.5", default-features = false, features = [
+    "derive",
+], optional = true }
 
 [lib]
 path = "lib.rs"
 
 [features]
 default = ["std"]
-std = [
-    "ink/std",
-    "scale/std",
-    "scale-info/std",
-]
+std = ["ink/std", "scale/std", "scale-info/std"]
 ink-as-dependency = []
-
