--- a/devnet-azero/devnet-azero-compose.yml
+++ b/devnet-azero/devnet-azero-compose.yml
@@ -23,4 +23,4 @@ services:
       - ALLOW_PRIVATE_IPV4=true
       - DISCOVER_LOCAL=false
       - UNIT_CREATION_DELAY=500
-      - NAME=AlephBridgenode
+      - NAME=AlephDevNnode
